--- a/grid8.html
+++ b/grid8.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" class="h-100">
   <head>
-    <title>HOME | Grids in Bootstrap 5</title>
+    <title>Grid 8 | Grids in Bootstrap 5</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
@@ -20,7 +20,8 @@
     <!-- Custom styles -->
     <link rel="stylesheet" href="css/styles.css" />
   </head>
-  <body class="d-flex flex-column h-100 homeBG">
+
+  <body class="d-flex flex-column h-100">
     <!-- Navbar -->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
       <div class="container-fluid">
@@ -40,7 +41,7 @@
           <!-- Navigation Links -->
           <ul class="navbar-nav me-auto mb-2 mb-md-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
+              <a class="nav-link" href="/">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="grid1.html">Grid 1</a>
@@ -64,7 +65,9 @@
               <a class="nav-link" href="grid7.html">Grid 7</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="grid8.html">Grid 8</a>
+              <a class="nav-link active" aria-current="page" href="grid8.html"
+                >Grid 8</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="grid9.html">Grid 9</a>
