--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
       crossorigin="anonymous"
     />
 
+    <!-- Font -->
+    <link rel="stylesheet" href="https://use.typekit.net/mhj5wdi.css" />
+
     <!-- Custom styles -->
     <link rel="stylesheet" href="css/styles.css" />
   </head>
@@ -76,7 +79,12 @@
 
     <!-- Main body -->
     <main class="flex-shrink-0">
-      <div class="container"></div>
+      <div class="container text-center mt-5">
+        <h1 class="display-1 homeText">Grids in Bootstrap</h1>
+        <h3 class="text-white-50">
+          Exercises for learning Bootstrap Grid layouts
+        </h3>
+      </div>
     </main>
 
     <!-- Footer -->
