Finished grids 1 and 2

--- a/grid1.html
+++ b/grid1.html
@@ -79,7 +79,47 @@
 
     <!-- Main body -->
     <main class="flex-shrink-0">
-      <div class="container"></div>
+      <div class="container h-100 minHeight">
+        <div class="row row-cols-1 row-cols-md-2 gy-2 h-100">
+          <div class="col">
+            <div class="bg-secondary text-light h-100 p-2">
+              <h1>COL ONE</h1>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Debitis explicabo consectetur tenetur culpa expedita modi
+                excepturi in corporis voluptatibus, ullam, aperiam magni
+                blanditiis. Omnis repudiandae velit nulla facere voluptatibus
+                cum sequi aperiam repellat doloribus qui! Veritatis architecto
+                voluptatibus et minus tempore nam sequi temporibus in.
+                Aspernatur inventore delectus odit accusamus!
+              </p>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Debitis explicabo consectetur tenetur culpa expedita modi
+                excepturi in corporis voluptatibus, ullam, aperiam magni
+                blanditiis. Omnis repudiandae velit nulla facere voluptatibus
+                cum sequi aperiam repellat doloribus qui! Veritatis architecto
+                voluptatibus et minus tempore nam sequi temporibus in.
+                Aspernatur inventore delectus odit accusamus!
+              </p>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Debitis explicabo consectetur tenetur culpa expedita modi
+                excepturi in corporis voluptatibus, ullam, aperiam magni
+                blanditiis. Omnis repudiandae velit nulla facere voluptatibus
+                cum sequi aperiam repellat doloribus qui! Veritatis architecto
+                voluptatibus et minus tempore nam sequi temporibus in.
+                Aspernatur inventore delectus odit accusamus!
+              </p>
+            </div>
+          </div>
+          <div class="col">
+            <div class="bg-dark text-light h-100 p-2">
+              <h2>COL TWO</h2>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
 
     <!-- Footer -->
