--- a/grid2.html
+++ b/grid2.html
@@ -79,7 +79,20 @@
 
     <!-- Main body -->
     <main class="flex-shrink-0">
-      <div class="container"></div>
+      <div class="container h-100 minHeight">
+        <div class="row h-100">
+          <div class="col-4">
+            <div class="bg-secondary text-light h-100">
+              <h5>Side Nav</h5>
+            </div>
+          </div>
+          <div class="col-8">
+            <div class="bg-dark text-light h-100">
+              <h5>Main Content</h5>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
 
     <!-- Footer -->
