--- a/grid4.html
+++ b/grid4.html
@@ -79,7 +79,19 @@
 
     <!-- Main body -->
     <main class="flex-shrink-0">
-      <div class="container"></div>
+      <div class="container h-100 minHeight">
+        <div class="row h-100 row-cols-1 row-cols-md-3 gy-1">
+          <div class="col">
+            <div class="bg-secondary text-light h-100">COL ONE</div>
+          </div>
+          <div class="col">
+            <div class="bg-dark text-light h-100">COL ONE</div>
+          </div>
+          <div class="col">
+            <div class="bg-secondary text-light h-100">COL ONE</div>
+          </div>
+        </div>
+      </div>
     </main>
 
     <!-- Footer -->
