--- a/grid9.html
+++ b/grid9.html
@@ -79,7 +79,25 @@
 
     <!-- Main body -->
     <main class="flex-shrink-0">
-      <div class="container"></div>
+      <div class="container h-100 minHeight">
+        <div class="row h-100 gy-2 row-cols-1 row-cols-md-2">
+          <div class="col col-md-12">
+            <div class="bg-secondary text-light h-100">COLUMN ONE</div>
+          </div>
+          <div class="col-6 col-md-3">
+            <div class="bg-dark text-light h-100">COLUMN TWO</div>
+          </div>
+          <div class="col-6 col-md-3">
+            <div class="bg-info text-light h-100">COLUMN THREE</div>
+          </div>
+          <div class="col-6 col-md-3">
+            <div class="bg-dark text-light h-100">COLUMN FOUR</div>
+          </div>
+          <div class="col-6 col-md-3">
+            <div class="bg-dark text-light h-100">COLUMN FIVE</div>
+          </div>
+        </div>
+      </div>
     </main>
 
     <!-- Footer -->
